--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -27,6 +27,7 @@ reqwest = { version = "0.11.20", features = ["cookies"] }
 tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
 tungstenite = { version = "0.20.0", features = ["native-tls"] }
 bevy-tokio-tasks = "0.11.0"
+bevy-inspector-egui = "0.19.0"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.87"
