--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["zing-game", "zing-ui"]
+members = ["zing-game", "zing-ui", "zing-server"]
 resolver = "2"
 
 # Enable a small amount of optimization in debug mode
