implement login/logout with login_id cookie

--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -10,6 +10,8 @@ axum = { version = "0.5.17", features = ["ws"] }
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
+async-trait = "0.1"
+tower-cookies = "0.7.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rand = "0.8.5"
