--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 zing_game = { path = "../zing-game" }
 
 axum = { version = "0.5.17", features = ["ws"] }
+chrono = "0.4.23"
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
