--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -18,3 +18,4 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rand = "0.8.5"
 serde = "1.0.147"
+serde_json = "1.0"
