--- a/zing-ui/Cargo.toml
+++ b/zing-ui/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-strum = "0.24"
-strum_macros = "0.24"
-rand = "0.8.5"
-itertools = "0.10.5"
 zing_game = { path = "../zing-game" }
 
 bevy = { version = "0.10" }
 bevy_tweening = "0.7"
+clap = { version = "4.0.32", features = ["derive"] }
+futures-util = "0.3.25"
+tokio = { version = "1", features = ["full"] }
+tokio-tungstenite = "0.18.0"
