--- a/zing-ui/Cargo.toml
+++ b/zing-ui/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "4.0.32", features = ["derive"] }
 futures-util = "0.3.25"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.18.0"
+serde_json = "1.0"
