--- a/zing-ui/Cargo.toml
+++ b/zing-ui/Cargo.toml
@@ -9,6 +9,7 @@ zing_game = { path = "../zing-game" }
 bevy = { version = "0.10" }
 bevy_tweening = "0.7"
 clap = { version = "4.0.32", features = ["derive"] }
+futures = "0.3.28"
 futures-util = "0.3.25"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.18.0"
