--- a/zing-ui/Cargo.toml
+++ b/zing-ui/Cargo.toml
@@ -14,3 +14,4 @@ futures-util = "0.3.25"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.18.0"
 serde_json = "1.0"
+reqwest = { version = "0.11.16", features = ["cookies"] }
