--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -19,3 +19,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rand = "0.8.5"
 serde = "1.0.147"
 serde_json = "1.0"
+
+[dev-dependencies]
+anyhow = "1"
+reqwest = { version = "0.11.16", features = ["cookies", "json"] }
