--- a/zing-ui/Cargo.toml
+++ b/zing-ui/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.0.32", features = ["derive"] }
 futures = "0.3.28"
 futures-util = "0.3.25"
 tokio = { version = "1", features = ["full"] }
-tokio-tungstenite = "0.18.0"
+tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
 serde_json = "1.0"
 reqwest = { version = "0.11.16", features = ["cookies"] }
+tungstenite = { version = "0.19.0", features = ["native-tls"] }
