--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -18,3 +18,4 @@ tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
 serde_json = "1.0"
 reqwest = { version = "0.11.16", features = ["cookies"] }
 tungstenite = { version = "0.19.0", features = ["native-tls"] }
+bevy-tokio-tasks = "0.10.2"
