finish bevy_tokio_tasks refactoring
Now, also the websocket notification handling is working again.

In hindsight, I think the refactored code is functionally very close to
my previous solution, but my handcrafted tokio thread handling is now
abstracted away in the externally maintained bevy_tokio_tasks crate.

--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -19,3 +19,5 @@ serde_json = "1.0"
 reqwest = { version = "0.11.16", features = ["cookies"] }
 tungstenite = { version = "0.19.0", features = ["native-tls"] }
 bevy-tokio-tasks = "0.10.2"
+http = "0.2.9"
+tracing = "0.1.37"
