--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -27,3 +27,4 @@ bevy-tokio-tasks = "0.10.2"
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.86"
 web-sys = { version = "0.3.4", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
+ws_stream_wasm = "0.7.4"
