--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -26,6 +26,8 @@ bevy-tokio-tasks = "0.10.2"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.86"
-web-sys = { version = "0.3.4", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
+wasm-bindgen-futures = "0.4.36"
+js-sys = "0.3.63"
+web-sys = { version = "0.3.4", features = ['Headers', 'ErrorEvent', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
 ws_stream_wasm = "0.7.4"
 tracing-wasm = "0.2.1"
