--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -34,3 +34,4 @@ js-sys = "0.3.64"
 web-sys = { version = "0.3.64", features = ['Headers', 'ErrorEvent', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
 ws_stream_wasm = "0.7.4"
 tracing-wasm = "0.2.1"
+serde-wasm-bindgen = "0.5.0"
