--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 rand = "0.8.5"
 serde = "1.0.188"
 serde_json = "1.0.105"
+tower-http = { version = "0.4.4", features = ["fs"] }
 
 [dev-dependencies]
 anyhow = "1.0.75"
