--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -19,6 +19,8 @@ futures-util = "0.3.28"
 serde_json = "1.0.105"
 http = "0.2.9"
 tracing = "0.1.37"
+#bevy_mod_picking = { version = "0.15.0", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
+bevy_mod_picking = { git = "https://github.com/hmeine/bevy_mod_picking", branch = "scaled_sprites", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { version = "1.32.0", features = ["full"] }
