--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -20,7 +20,7 @@ serde_json = "1.0.105"
 http = "0.2.9"
 tracing = "0.1.37"
 #bevy_mod_picking = { version = "0.15.0", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
-bevy_mod_picking = { git = "https://github.com/hmeine/bevy_mod_picking", branch = "scaled_sprites", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
+bevy_mod_picking = { git = "https://github.com/hmeine/bevy_mod_picking", branch = "scaled_sprites", features = ["bevy_picking_raycast", "backend_sprite", "highlight"], default-features = false }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { version = "1.32.0", features = ["full"] }
