--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -20,6 +20,7 @@ http = "0.2.9"
 tracing = { version = "0.1.37", features = ["release_max_level_off"] }
 #bevy_mod_picking = { version = "0.15.0", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
 bevy_mod_picking = { git = "https://github.com/hmeine/bevy_mod_picking", branch = "scaled_sprites", features = ["bevy_picking_raycast", "backend_sprite", "highlight"], default-features = false }
+bevy-inspector-egui = { version = "0.19.0", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { version = "1.32.0", features = ["full"] }
@@ -27,7 +28,6 @@ reqwest = { version = "0.11.20", features = ["cookies"] }
 tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
 tungstenite = { version = "0.20.0", features = ["native-tls"] }
 bevy-tokio-tasks = "0.11.0"
-bevy-inspector-egui = "0.19.0"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.87"
