--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -25,8 +25,8 @@ tower-cookies = "0.9.0"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 rand = "0.8.5"
-serde = "1.0.188"
-serde_json = "1.0.105"
+serde = { version = "1.0.190", features = ["derive"] }
+serde_json = "1.0.108"
 tower-http = { version = "0.4.4", features = ["fs"] }
 
 [dev-dependencies]
