--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -25,11 +25,7 @@ futures-util = "0.3.28"
 serde_json = "1.0.108"
 http = "1.0.0"
 tracing = { version = "0.1.37", features = ["release_max_level_off"] }
-#bevy_mod_picking = { version = "0.15.0", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
-bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "main", features = [
-    "bevy_picking_raycast",
-    "backend_sprite",
-], default-features = false }
+bevy_mod_picking = { version = "0.17.0", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
 bevy-inspector-egui = { version = "0.22.1", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
