--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -11,9 +11,9 @@ zing_game = { path = "../zing-game" }
 migration = { path = "migration" }
 
 axum = { version = "0.7.3", features = ["ws"] }
-shuttle-runtime = "0.36.0"
-shuttle-axum = "0.36.0"
-shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
+shuttle-runtime = "0.43.0"
+shuttle-axum = "0.43.0"
+shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx-native-tls"] }
 sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
 sqlx = { version = "0.7.2", features = ["sqlx-postgres"] }
 chrono = "0.4.28"
@@ -31,4 +31,4 @@ tower-http = { version = "0.5.0", features = ["fs"] }
 
 [dev-dependencies]
 anyhow = "1.0.75"
-reqwest = { version = "0.11.20", features = ["cookies", "json"] }
+reqwest = { version = "0.12.4", features = ["cookies", "json"] }
