--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -11,29 +11,30 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 zing_game = { path = "../zing-game" }
-bevy = { version = "0.13.2", features = [
-    "multi-threaded",
+bevy = { version = "0.14", features = [
+    "multi_threaded",
     "bevy_asset",
     "bevy_winit",
     "bevy_sprite",
+    "bevy_state",
     "png",
     "webgl2",
 ], default-features = false }
-bevy_tweening = "0.10.0"
+bevy_tweening = "0.11.0"
 futures = "0.3.28"
 futures-util = "0.3.28"
 serde_json = "1.0.108"
 http = "1.0.0"
 tracing = { version = "0.1.37", features = ["release_max_level_off"] }
-bevy_mod_picking = { version = "0.18.2", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
-bevy-inspector-egui = { version = "0.24", optional = true }
+bevy_mod_picking = { version = "0.20", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
+bevy-inspector-egui = { version = "0.28", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { version = "1.32.0", features = ["full"] }
 reqwest = { version = "0.12.4", features = ["cookies"] }
 tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
 tungstenite = { version = "0.21.0", features = ["native-tls"] }
-bevy-tokio-tasks = "0.11.0"
+bevy-tokio-tasks = "0.14"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.87"
