--- a/zing-server/Cargo.toml
+++ b/zing-server/Cargo.toml
@@ -10,25 +10,31 @@ license = "MIT"
 zing_game = { path = "../zing-game" }
 migration = { path = "migration" }
 
-axum = { version = "0.7.3", features = ["ws"] }
-shuttle-runtime = "0.49.0"
-shuttle-axum = "0.49.0"
-shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx-native-tls"] }
-sea-orm = { version = "1.1.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
-sqlx = { version = "0.8.2", features = ["sqlx-postgres"] }
-chrono = "0.4.28"
-futures = "0.3.28"
-tokio = { version = "1.32.0", features = ["full"] }
-tower = { version = "0.4.13", features = ["util"] }
-async-trait = "0.1.73"
-tower-cookies = "0.10.0"
-tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
-rand = "0.8.5"
-serde = { version = "1.0.190", features = ["derive"] }
-serde_json = "1.0.108"
-tower-http = { version = "0.5.0", features = ["fs"] }
+axum = { version = "0.8.1", features = ["ws"] }
+shuttle-runtime = "0.52.0"
+shuttle-axum = "0.52.0"
+shuttle-shared-db = { version = "0.52.0", features = [
+    "postgres",
+    "sqlx-native-tls",
+] }
+sea-orm = { version = "1.1.4", features = [
+    "sqlx-postgres",
+    "runtime-tokio-native-tls",
+    "macros",
+] }
+sqlx = { version = "0.8.3", features = ["sqlx-postgres"] }
+chrono = "0.4.39"
+futures = "0.3.31"
+tokio = { version = "1.43.0", features = ["full"] }
+tower = { version = "0.5.2", features = ["util"] }
+tower-cookies = "0.11.0"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+rand = "0.9.0"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
+tower-http = { version = "0.6.2", features = ["fs"] }
 
 [dev-dependencies]
-anyhow = "1.0.75"
-reqwest = { version = "0.12.4", features = ["cookies", "json"] }
+anyhow = "1.0.95"
+reqwest = { version = "0.12.12", features = ["cookies", "json"] }
