--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -11,36 +11,37 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 zing_game = { path = "../zing-game" }
-bevy = { version = "0.14", features = [
+bevy = { version = "0.15", features = [
     "multi_threaded",
     "bevy_asset",
     "bevy_winit",
+    "bevy_picking",
     "bevy_sprite",
+    "bevy_sprite_picking_backend",
     "bevy_state",
     "png",
     "webgl2",
 ], default-features = false }
-bevy_tweening = "0.11.0"
-futures = "0.3.28"
-futures-util = "0.3.28"
-serde_json = "1.0.108"
-http = "1.0.0"
-tracing = { version = "0.1.37", features = ["release_max_level_off"] }
-bevy_mod_picking = { version = "0.20", features = ["bevy_picking_raycast", "backend_sprite"], default-features = false }
-bevy-inspector-egui = { version = "0.28", optional = true }
+bevy_tweening = "0.12.0"
+futures = "0.3.31"
+futures-util = "0.3.31"
+serde_json = "1.0.138"
+http = "1.2.0"
+tracing = { version = "0.1.41", features = ["release_max_level_off"] }
+bevy-inspector-egui = { version = "0.29", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-tokio = { version = "1.32.0", features = ["full"] }
-reqwest = { version = "0.12.4", features = ["cookies"] }
-tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
-tungstenite = { version = "0.21.0", features = ["native-tls"] }
-bevy-tokio-tasks = "0.14"
+tokio = { version = "1.43.0", features = ["full"] }
+reqwest = { version = "0.12.12", features = ["cookies"] }
+tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
+tungstenite = { version = "0.26.1", features = ["native-tls"] }
+bevy-tokio-tasks = "0.15"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-wasm-bindgen = "0.2.87"
-wasm-bindgen-futures = "0.4.37"
-js-sys = "0.3.64"
-web-sys = { version = "0.3.64", features = [
+wasm-bindgen = "0.2.100"
+wasm-bindgen-futures = "0.4.50"
+js-sys = "0.3.77"
+web-sys = { version = "0.3.77", features = [
     'Headers',
     'ErrorEvent',
     'Request',
@@ -52,4 +53,4 @@ web-sys = { version = "0.3.64", features = [
     'WebSocket',
 ] }
 #tracing-wasm = "0.2.1"
-serde-wasm-bindgen = "0.6.0"
+serde-wasm-bindgen = "0.6.5"
