--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -40,6 +40,7 @@ bevy-tokio-tasks = "0.15"
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
+getrandom = { version = "0.3", features = ["wasm_js"] }
 js-sys = "0.3.77"
 web-sys = { version = "0.3.77", features = [
     'Headers',
