adapt to new shuttle platform
This is still WIP; somehow, the service only gives 404s after deployment.

--- a/Shuttle.toml
+++ b/Shuttle.toml
@@ -1,6 +1,7 @@
 name = "zing"
 
-assets = [
+[deploy]
+include = [
   "zing-ui-lib/pkg/zing_ui_lib.js",
   "zing-ui-lib/pkg/zing_ui_lib_bg.wasm",
 ]
