configure "build assets" for shuttle runtime
This was surprising to me, but I finally understood packaging files for
"deployment" does not make them be served as well.  It took me several
reads of https://docs.shuttle.dev/docs/files to get this.

--- a/Shuttle.toml
+++ b/Shuttle.toml
@@ -5,3 +5,11 @@ include = [
   "zing-ui-lib/pkg/zing_ui_lib.js",
   "zing-ui-lib/pkg/zing_ui_lib_bg.wasm",
 ]
+
+[build]
+assets = [
+  "zing-ui-lib/pkg/zing_ui_lib.js",
+  "zing-ui-lib/pkg/zing_ui_lib_bg.wasm",
+  "zing-server/assets/index.html",
+  "zing-ui-lib/assets/vector_cards_3.2/*.png",
+]
