--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -45,6 +45,7 @@ js-sys = "0.3.77"
 web-sys = { version = "0.3.77", features = [
     'Headers',
     'ErrorEvent',
+    'CloseEvent',
     'Request',
     'RequestInit',
     'RequestMode',
