--- a/zing-ui-lib/Cargo.toml
+++ b/zing-ui-lib/Cargo.toml
@@ -11,8 +11,10 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 zing_game = { path = "../zing-game" }
-bevy = { version = "0.15", features = [
+bevy = { version = "0.16", features = [
     "multi_threaded",
+    "async_executor",
+    "std",
     "bevy_asset",
     "bevy_winit",
     "bevy_picking",
@@ -22,20 +24,20 @@ bevy = { version = "0.15", features = [
     "png",
     "webgl2",
 ], default-features = false }
-bevy_tweening = "0.12.0"
+bevy_tweening = "0.13.0"
 futures = "0.3.31"
 futures-util = "0.3.31"
 serde_json = "1.0.138"
 http = "1.2.0"
 tracing = { version = "0.1.41", features = ["release_max_level_off"] }
-bevy-inspector-egui = { version = "0.29", optional = true }
+bevy-inspector-egui = { version = "0.33", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { version = "1.43.0", features = ["full"] }
 reqwest = { version = "0.12.12", features = ["cookies"] }
 tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
 tungstenite = { version = "0.26.1", features = ["native-tls"] }
-bevy-tokio-tasks = "0.15"
+bevy-tokio-tasks = "0.16"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.100"
